tests/errors/test_24.x
// inappropriate use of the '$' operator


fn main() -> i64 {

    let $: i64 = 21;


    loop i in 10 {
        outI64($);
    }

}
